--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -39,16 +43,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
-		<dependency> 
-	        <groupId>org.hibernate</groupId>
-	        <artifactId>hibernate-validator</artifactId>
-	        <version>6.0.13.Final</version>
-	    </dependency> 
-	    <dependency> 
-	        <groupId>org.glassfish</groupId>
-	        <artifactId>javax.el</artifactId>
-	        <version>3.0.0</version>
-	     </dependency>
 	</dependencies>
 	<build>
 		<plugins>
