--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
-default.sender=charlescostas@gmail.com
-default.recipient=charlescostas@gmail.com
+default.sender=charles@procedsystem.com.br
+default.recipient=charles@procedsystem.com.br
