--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active=dev
 
 default.sender=charles@procedsystem.com.br
 default.recipient=charles@procedsystem.com.br
+
+jwt.secret=CursoJaa**
+jwt.expiration=60000
