--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.profiles.active=dev
 default.sender=charles@procedsystem.com.br
 default.recipient=charles@procedsystem.com.br
 
-jwt.secret=CursoJaa**
-jwt.expiration=60000
+jwt.secret=##CursoJaa**
+jwt.expiration=600000
